# conways-game-of-life

./: .gitignore  CMakeLists.txt  README.md
conways-game-of-life/: conways_game_of_life.1  main.cpp
conways-game-of-life.xcodeproj/: project.pbxproj
conways-game-of-life.xcodeproj/xcuserdata/michael.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
conways-game-of-life.xcodeproj/xcuserdata/michael.xcuserdatad/xcschemes/: conways-game-of-life.xcscheme  xcschememanagement.plist
